--- a/BioProductStore/appsettings.Development.json
+++ b/BioProductStore/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-RPGRQME\\MSSQLSERVER2;Database=BioProductsStore2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
