--- a/BioProductStore/appsettings.json
+++ b/BioProductStore/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "DESKTOP-RPGRQME\\MSSQLSERVER2;Database=BioProductsStore2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
