--- a/BioProductStore/appsettings.Development.json
+++ b/BioProductStore/appsettings.Development.json
@@ -9,5 +9,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-RPGRQME\\MSSQLSERVER2;Database=BioProductsStore2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "JwtSecret": "super-secret-private-key"
   }
 }
