--- a/BioProductStore/appsettings.json
+++ b/BioProductStore/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "DESKTOP-RPGRQME\\MSSQLSERVER2;Database=BioProductsStore2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-RPGRQME\\MSSQLSERVER2;Database=BioProductsStore2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "JwtSecret": "super-secret-private-key"
   }
 }
